--- a/package.json
+++ b/package.json
@@ -1,77 +1,111 @@
 {
-  "name": "stock-liv",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "start:dev": "next build && next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@blocknote/core": "^0.12.4",
-    "@blocknote/react": "^0.12.4",
-    "@hookform/resolvers": "^3.10.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.22.0",
-    "@radix-ui/react-accordion": "^1.2.8",
-    "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-navigation-menu": "^1.2.10",
-    "@radix-ui/react-popover": "^1.1.11",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-scroll-area": "^1.2.6",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toast": "^1.2.11",
-    "@tanstack/react-table": "^8.21.3",
-    "bcrypt-ts": "^5.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "firebase": "^10.14.1",
-    "framer-motion": "^11.18.2",
-    "handlebars": "^4.7.8",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.341.0",
-    "next": "14.1.0",
-    "next-auth": "^4.24.11",
-    "next-themes": "^0.2.1",
-    "nodemailer": "^6.10.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.8",
-    "react-easy-sort": "^1.6.0",
-    "react-hook-form": "^7.56.1",
-    "sharp": "^0.33.5",
-    "sonner": "^1.7.4",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20.17.31",
-    "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.21",
-    "encoding": "^0.1.13",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.3",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
-  }
+    "name": "hard-yards",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "start:dev": "next build && next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@blocknote/core": "^0.29.1",
+        "@blocknote/mantine": "^0.29.1",
+        "@blocknote/react": "^0.29.1",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
+        "@hookform/resolvers": "^3.10.0",
+        "@lottiefiles/dotlottie-react": "^0.13.5",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^6.7.0",
+        "@radix-ui/react-accordion": "^1.2.8",
+        "@radix-ui/react-alert-dialog": "^1.1.11",
+        "@radix-ui/react-avatar": "^1.1.7",
+        "@radix-ui/react-checkbox": "^1.2.3",
+        "@radix-ui/react-dialog": "^1.1.11",
+        "@radix-ui/react-dropdown-menu": "^2.1.12",
+        "@radix-ui/react-label": "^2.1.4",
+        "@radix-ui/react-navigation-menu": "^1.2.10",
+        "@radix-ui/react-popover": "^1.1.11",
+        "@radix-ui/react-progress": "^1.1.4",
+        "@radix-ui/react-radio-group": "^1.3.4",
+        "@radix-ui/react-scroll-area": "^1.2.6",
+        "@radix-ui/react-select": "^2.2.2",
+        "@radix-ui/react-separator": "^1.1.4",
+        "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-tabs": "^1.1.9",
+        "@radix-ui/react-toast": "^1.2.11",
+        "@tanstack/react-table": "^8.21.3",
+        "@tiptap/extension-image": "^2.11.7",
+        "@tiptap/extension-link": "^2.11.7",
+        "@tiptap/pm": "^2.11.7",
+        "@tiptap/react": "^2.11.7",
+        "@tiptap/starter-kit": "^2.11.7",
+        "@yoopta/accordion": "^4.9.7",
+        "@yoopta/action-menu-list": "^4.9.7",
+        "@yoopta/blockquote": "^4.9.7",
+        "@yoopta/callout": "^4.9.7",
+        "@yoopta/code": "^4.9.7",
+        "@yoopta/editor": "^4.9.7",
+        "@yoopta/embed": "^4.9.7",
+        "@yoopta/exports": "^4.9.7",
+        "@yoopta/file": "^4.9.7",
+        "@yoopta/headings": "^4.9.7",
+        "@yoopta/image": "^4.9.7",
+        "@yoopta/link": "^4.9.7",
+        "@yoopta/link-tool": "^4.9.7",
+        "@yoopta/lists": "^4.9.7",
+        "@yoopta/marks": "^4.9.7",
+        "@yoopta/paragraph": "^4.9.7",
+        "@yoopta/toolbar": "^4.9.7",
+        "@yoopta/video": "^4.9.7",
+        "bcrypt-ts": "^5.0.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "cookie": "^1.0.2",
+        "date-fns": "^4.1.0",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
+        "firebase": "^10.14.1",
+        "framer-motion": "^11.18.2",
+        "handlebars": "^4.7.8",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.341.0",
+        "next": "15.3.0",
+        "next-auth": "^4.24.11",
+        "next-themes": "^0.4.4",
+        "nodemailer": "^6.10.1",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-dropzone": "^14.3.8",
+        "react-easy-sort": "^1.6.0",
+        "react-hook-form": "^7.56.1",
+        "react-image-crop": "^11.0.10",
+        "sharp": "^0.33.5",
+        "sonner": "^1.7.4",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "uuid": "^9.0.1",
+        "zod": "^3.24.3"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "^20.17.31",
+        "@types/nodemailer": "^6.4.17",
+        "@types/react": "^18.3.20",
+        "@types/react-dom": "^18.3.6",
+        "@types/uuid": "^9.0.8",
+        "autoprefixer": "^10.4.21",
+        "encoding": "^0.1.13",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "14.1.0",
+        "postcss": "^8.5.3",
+        "prisma": "^6.7.0",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.8.3"
+    }
 }
